--- a/.github/pull.yml
+++ b/.github/pull.yml
@@ -1,5 +1,5 @@
 version: "1"
 rules:
-  - base: master
+  - base: main
     upstream: xjh22222228:main # change `wei` to the owner of upstream repo
     mergeMethod: squash
